--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "gatsby-remark-image",
+    "gatsby-remark-images",
     "lazyload",
-    "markdown"
+    "markdown",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-transformer-remark"
   ],
   "author": "Kohei Arai",
   "license": "ISC",
